# text-embedding-bench

./: .gitignore  .pdm-python  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
deployment/: .env_example  README.md  docker-compose.yml
text_embedding_bench/: providers.py  runner.py  utils.py
