[project]
name = "text-embedding-bench"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "zhuwenxing", email = "wenxing.zhu@zilliz.com"},
]
dependencies = [
    "pymilvus>=2.5.12",
    "pandas>=2.3.1",
    "loguru>=0.7.3",
    "faker>=37.4.0",
    "tiktoken>=0.9.0",
    "numpy",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

